# carbot_teleoperation

./: .gitignore  CMakeLists.txt  README.md  my_app  ps4_control.cpp  recorder.cpp  run_client_stream.bash
cmake/: Config.cmake.in
include/: carbot_teleop_rpc_client.h  carbot_teleop_rpc_server.h  client_streamer.h  defs.h  teleop_client_reactor.h  teleop_reactor.h  teleoperation_client.h  teleoperation_server.h
include/client/: keyboard_controller.h  ps4_controller.h  teleop_client_reactor.h  teleoperation_client.h
include/common/: defs.h
include/server/: server_streamer.h  teleoperation_server.h
protos/: carbot_teleop.proto
src/: basic_client.cpp  basic_server.cpp
src/client/: carbot_teleop_rpc_client.cpp  client_streamer.cpp  keyboard_controller.cpp  ps4_controller.cpp  run_client.cpp  teleop_client_reactor.cpp  teleoperation_client.cpp
src/server/: carbot_teleop_rpc_server.cpp  run_server.cpp  server_streamer.cpp  teleop_reactor.cpp  teleoperation_server.cpp
